refactor: change the return types of GET all<feature> endpoints to PageResponse